# Computer-Graphics-SoSe16

./: .gitignore  readme.md
P1/: CMakeLists.txt
P1/src/: Beschreibung.txt  main.cpp
P2/: Beschreibung.txt  MainWindow.cpp  MainWindow.ui  MyOpenGLWidget.cpp  MyOpenGLWidget.h  P2.pro  main.cpp  myglwidget.cpp  myglwidget.h
P3/: CMakeLists.txt
P3/src/: Beschreibung.txt  Camera.cpp  Camera.h  IScene.h  Main.cpp  ModelMatrix.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  VertexArrayObject.cpp  VertexArrayObject.h  stdafx.cpp  stdafx.h
P3/src/Shader/: Coord.frag  Coord.vert  Model.frag  Model.vert  Sun.frag  Sun.vert  default330.frag  default330.vert
P4/: CMakeLists.txt
P4/cmake/modules/: FindSOIL.cmake
P4/src/: Beschreibung.txt  Camera.h  File.cpp  File.h  IHierarchyRenderer.h  IScene.h  ModelMatrix.cpp  ModelMatrix.h  NVidiaOptimus.h  PhongShaderProgram.cpp  PhongShaderProgram.h  PlanetSolarSystemObject.cpp  PlanetSolarSystemObject.h  RenderContext.h  Scene.cpp  Scene.h  ShaderProgram.cpp  ShaderProgram.h  SkyBox.cpp  SkyBox.h  SolarSystemObject.cpp  SolarSystemObject.h  SunShaderProgram.cpp  SunShaderProgram.h  SunSolarSystemObject.cpp  SunSolarSystemObject.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h  file  main.cpp
P4/src/Assets/: Deimos.3ds  Phobos.3ds
P4/src/Shader/: Model.frag  Phong.frag  Phong.vert  Simple.vert  SkyBox.frag  SkyBox.vert  Sun.frag  Sun.vert
P5/: CMakeLists.txt
P5/src/: Camera.cpp  Camera.h  ElapsedTime.cpp  ElapsedTime.h  FPSCounter.cpp  FPSCounter.h  Main.cpp  Model.cpp  Model.h  NVidiaOptimus.h  Rescale.cpp  Rescale.h  StopWatch.cpp  StopWatch.h
P5/src/Assets/BobLampClean/: boblampclean.md5mesh
P5/src/Assimp/: Assimp.h
P5/src/GL/: Buffer.cpp  Buffer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
P5/src/IO/: Directory.cpp  Directory.h  File.cpp  File.h
P5/src/Renderer/: CoordinateAxis.cpp  CoordinateAxis.h  Floor.cpp  Floor.h
P5/src/Scene/: IScene.h  Manager.cpp  Manager.h  Scene.cpp  Scene.h  Simple.cpp  Simple.h
P5/src/Shader/: CoordinateAxis.frag  CoordinateAxis.vert  Default.frag  Default.vert  Floor.fs  Floor.vs  Model.fs  Model.vs  Simple.fragment  Simple.vertex
P5/src/UI/: PropertyWindow.cpp  PropertyWindow.h
